# firmware.gbotv4

./: README.md  commands.h  diff_controller.h  gbot_phenotyping.ino  motor_driver.ino  steering.h
sim_ros/ros_gbot_v6/: CMakeLists.txt  package.xml
sim_ros/ros_gbot_v6/config/: gbot.rviz  joint_names_ros_gbot_v6.yaml
sim_ros/ros_gbot_v6/launch/: display.launch  gazebo.launch
sim_ros/ros_gbot_v6/meshes/: camera_link.STL
sim_ros/ros_gbot_v6/urdf/: ros_gbot_v6.csv  ros_gbot_v6.urdf
wires/: wires_AC1.bom.tsv  wires_AC1.gv  wires_AC1.html  wires_AC1.yaml  wires_AC2.bom.tsv  wires_AC2.gv  wires_AC2.html  wires_AC2.yaml
